# iShareScreen

./: .gitignore  README.md  pyproject.toml
src/isharescreen/: __init__.py  cli.py
src/isharescreen/frontend/: __init__.py  connect_prompt.py
src/isharescreen/frontend/desktop/: __init__.py  app.py  audio_sink.py  gpu.py  keymap.py
src/isharescreen/proxy/: __init__.py  input.py  session.py
src/isharescreen/proxy/media/: __init__.py  aac_eld.py  bitstream.py  hevc.py  hevc_rps.py  nalu.py  quality_gate.py  tiles.py
src/isharescreen/proxy/protocol/: __init__.py  apple.py  auth.py  burst.py  enc1103.py  negotiation.py  offers.py  rfb.py  rtcp.py  srtp.py
